--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,10 @@ edition = "2018"
 members = ["core"]
 
 [dependencies]
+anyhow = "1.0"
+config = "0.10"
+chrono = { version = "0.4", features = ["serde"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8"
+env_logger = "0.8"
+log = { version = "0.4", features = ["std", "serde"] }
