--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 env_logger = "0.8"
+tokio = { version = "0.3", features = ["full"] }
 log = { version = "0.4", features = ["std", "serde"] }
