--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ config = "0.10"
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
-env_logger = "0.8"
-tokio = { version = "0.3", features = ["full"] }
+pretty_env_logger = "0.4"
+tokio = { version = "0.2", features = ["full"] }
+teloxide = "0.3"
+teloxide-macros = "0.3"
 log = { version = "0.4", features = ["std", "serde"] }
